# wobble

./: AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md
.cargo/: config.toml
docs/: admin.md  design.md  protocol.md  testnet.md  worklog.md
scripts/: local_testnet.py  local_two_node_demo.py
src/: admin.rs  aliases.rs  async_runtime.rs  chain.rs  client.rs  consensus.rs  crypto.rs  home.rs  lib.rs  logging.rs  main.rs  mempool.rs  mining.rs  net.rs  node_state.rs  peer.rs  peers.rs  server.rs  sqlite_store.rs  state.rs  store.rs  tx_index.rs  types.rs  wallet.rs  wire.rs
tests/: testnet_e2e.rs
